--- a/index.html
+++ b/index.html
@@ -1,4 +1,40 @@
 <!DOCTYPE html>
 <html>
-  
+  <head>
+    - <link rel="stylesheet" href="./style.css">
+    + <link rel="stylesheet" href="./styles/style.css">
+    <meta charset="UTF-8">
+    <title>Game Name</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+
+  </head>
+
+  <body>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <button data-mdb-button-init class="navbar-toggler ms-auto" type="button" data-mdb-collapse-init
+            data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+      </nav>
+      <div class="collapse" id="navbarToggleExternalContent3">
+        <div class="bg-body-tertiary shadow-3 p-4">
+          <button data-mdb-button-init data-mdb-ripple-init
+            class="btn btn-link btn-block border-bottom m-0">Source Code</button>
+          <button data-mdb-button-init data-mdb-ripple-init
+            class="btn btn-link btn-block border-bottom m-0">Link 2</button>
+          <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-block m-0">Link
+            3</button>
+        </div>
+      </div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.14.0/jquery-ui.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js'></script><script  src="./script.js"></script>
+
+    - <script  src="./script.js"></script>
+    + <script  src="./scripts/script.js"></script>
+  </body>
 </html>
