--- a/index.html
+++ b/index.html
@@ -1,40 +1,74 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    - <link rel="stylesheet" href="./style.css">
-    + <link rel="stylesheet" href="./styles/style.css">
-    <meta charset="UTF-8">
-    <title>Game Name</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Web Game</title>
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
 
-  </head>
-
-  <body>
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-          <button data-mdb-button-init class="navbar-toggler ms-auto" type="button" data-mdb-collapse-init
-            data-mdb-target="#navbarToggleExternalContent3" aria-controls="navbarToggleExternalContent3"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
-          </button>
-        </div>
-      </nav>
-      <div class="collapse" id="navbarToggleExternalContent3">
-        <div class="bg-body-tertiary shadow-3 p-4">
-          <button data-mdb-button-init data-mdb-ripple-init
-            class="btn btn-link btn-block border-bottom m-0">Source Code</button>
-          <button data-mdb-button-init data-mdb-ripple-init
-            class="btn btn-link btn-block border-bottom m-0">Link 2</button>
-          <button data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-block m-0">Link
-            3</button>
-        </div>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">GameApp</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/username/repo">Source Code</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Other Apps</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://validator.w3.org/">Nu HTML Validator</a>
+          </li>
+        </ul>
       </div>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.14.0/jquery-ui.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js'></script><script  src="./script.js"></script>
+    </div>
+  </nav>
 
-    - <script  src="./script.js"></script>
-    + <script  src="./scripts/script.js"></script>
-  </body>
+  <!-- Game Section -->
+  <div class="container my-5">
+    <!-- Game Title and Instructions -->
+    <div class="row">
+      <div class="col text-center">
+        <h1>My Web Game</h1>
+        <p>Move the game piece using arrow keys and reach the target to score points!</p>
+      </div>
+    </div>
+
+    <!-- Game Area -->
+    <div class="row my-4">
+      <div class="col text-center">
+        <div id="game-board" class="bg-light border" style="position: relative; width: 300px; height: 300px; margin: auto;">
+          <div id="game-piece" class="bg-primary" style="position: absolute; width: 50px; height: 50px; top: 0; left: 0;"></div>
+        </div>
+        <p id="score">Score: 0</p>
+        <button id="reset-btn" class="btn btn-danger">Reset Game</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="text-center py-3 bg-light">
+    <p>&copy; 2024 GameApp</p>
+  </footer>
+
+  <!-- Bootstrap 5 JavaScript and dependencies -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- Custom JS -->
+  <script src="js/script.js"></script>
+</body>
 </html>
