--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Web Game</title>
-  <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">GameApp</a>
@@ -37,9 +33,7 @@
     </div>
   </nav>
 
-  <!-- Game Section -->
   <div class="container my-5">
-    <!-- Game Title and Instructions -->
     <div class="row">
       <div class="col text-center">
         <h1>My Web Game</h1>
@@ -47,7 +41,6 @@
       </div>
     </div>
 
-    <!-- Game Area -->
     <div class="row my-4">
       <div class="col text-center">
         <div id="game-board" class="bg-light border" style="position: relative; width: 300px; height: 300px; margin: auto;">
@@ -59,16 +52,12 @@
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="text-center py-3 bg-light">
     <p>&copy; 2024 GameApp</p>
   </footer>
 
-  <!-- Bootstrap 5 JavaScript and dependencies -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- Custom JS -->
-  <script src="js/script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
