--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/username/repo">Source Code</a>
+            <a class="nav-link" href="https://github.com/basstbone/dev-david-hw" target="_blank">Source Code</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Other Apps</a>
+            <a class="nav-link" href="https://github.com/basstbone" target="_blank">Other Apps</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://validator.w3.org/">Nu HTML Validator</a>
+            <a class="nav-link" href="https://validator.w3.org/" target="_blank">Nu HTML Validator</a>
           </li>
         </ul>
       </div>
