--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
       <div class="col text-center">
         <div id="game-board" class="bg-light border" style="position: relative; width: 300px; height: 300px; margin: auto;">
           <div id="game-piece" class="bg-primary" style="position: absolute; width: 50px; height: 50px; top: 0; left: 0;"></div>
+          <div id="target" class="bg-success" style="position: absolute; width: 50px; height: 50px;"></div>
         </div>
         <p id="score">Score: 0</p>
         <button id="reset-btn" class="btn btn-danger">Reset Game</button>
+        
       </div>
     </div>
   </div>
