--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="https://github.com/basstbone" target="_blank">Other Apps</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://validator.w3.org/" target="_blank">Nu HTML Validator</a>
+            <a class="nav-link" href="https://validator.w3.org/" target="_blank">Nu Validator</a>
           </li>
         </ul>
       </div>
