--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <script src="scripts/script.js"></script>
 </body>
 
-<footer class="text-center py-3 bg-light">
+<footer class="text-center py-3">
   <p>&copy; 2024 GameApp</p>
 </footer>
 </html>
