--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="scripts/script.js"></script>
+  <script src="scripts/scripts.js"></script>
 </body>
 
 <footer class="text-center py-3">
