--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">GameApp</a>
+      <a class="navbar-brand" href="#">Slides</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,7 +37,7 @@
   <div class="container my-5">
     <div class="row">
       <div class="col text-center">
-        <h1>My Web Game</h1>
+        <h1>Slides</h1>
         <p>Move the game piece using arrow keys and reach the target to score points!</p>
       </div>
     </div>
